Fix search position on mobile

--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,6 @@ a.hover {
 @media (max-width: 515px) {
 	.frame { width: 100%; }
 	.card { border-radius: 0 !important; }
-	#search { width: 100%; right: 0; }
+	#search { width: 100%; left: 0; }
 	.column { grid-template-columns: 1fr; }
 }
